--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,14 +20,32 @@
             audiolineview:voiceLine="@android:color/holo_red_dark"
             android:layout_height="200dp"/>
 
-
-    <com.devyk.audioplayer.widgets.CircleImageView
-            android:layout_marginTop="10dp"
+    <FrameLayout
+            android:layout_marginTop="65dp"
+            android:background="@mipmap/icon_chanpian"
             android:layout_centerHorizontal="true"
+            android:id="@+id/cd_bg"
+            android:layout_height="200dp"
             android:layout_width="200dp"
-            android:id="@+id/cd"
-            android:layout_height="200dp"/>
+    >
 
+        <com.devyk.audioplayer.widgets.CircleImageView
+                android:layout_gravity="center"
+                android:layout_centerHorizontal="true"
+                android:layout_width="130dp"
+                android:id="@+id/cd"
+                android:layout_height="130dp"/>
+
+
+    </FrameLayout>
+
+
+    <ImageView
+            android:src="@mipmap/icon_play_point"
+            android:layout_centerHorizontal="true"
+            android:layout_width="100dp"
+            android:id="@+id/iv_play_point"
+            android:layout_height="100dp"/>
 
     <com.devyk.audioplayer.widgets.AudioWaveView
             android:id="@+id/audio_wave_view"
@@ -65,13 +83,30 @@
 
 
     <SeekBar
-            android:layout_above="@+id/fun_track"
+            android:layout_above="@+id/ll_cut"
             android:id="@+id/seekbar_volume"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
     />
+
+
+    <LinearLayout
+            android:gravity="center_vertical"
+            android:layout_above="@+id/fun_track"
+            android:id="@+id/ll_cut"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="50dp">
+
+        <Button
+                android:id="@+id/btn_cut_pcm"
+                android:text="截取PCM"
+                style="@style/button"/>
+
+
+    </LinearLayout>
 
     <LinearLayout
             android:gravity="center_vertical"
